<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E9000000"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/start_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginLeft="31dp"
        android:background="#4CAF50"
        android:text="@string/start_button"
        android:textColor="#000000"
        app:layout_constraintBaseline_toBaselineOf="@+id/start_btn2"
        app:layout_constraintStart_toStartOf="@+id/password" />

    <Button
        android:id="@+id/start_btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:background="#4CAF50"
        android:text="@string/start_button"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="@+id/editTextNumberDecimal2"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberDecimal2" />

    <EditText
        android:id="@+id/editTextNumberDecimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="218dp"
        android:layout_marginRight="218dp"
        android:background="#FAF4F4"
        android:ems="10"
        android:inputType="numberDecimal"
        android:autofillHints="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/controller" />

    <TextView
        android:id="@+id/controller"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="96dp"
        android:text="@string/start_title"
        android:textColor="#FF9800"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@+id/account"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/account"
        android:layout_width="0dp"
        android:layout_height="24dp"
        android:text="@string/account"
        android:textColor="#FFFFFF"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextNumberDecimal"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password" />

    <EditText
        android:id="@+id/editTextNumberDecimal2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:background="#FAF4F4"
        android:ems="10"
        android:inputType="numberDecimal"
        android:autofillHints="no"
        app:layout_constraintStart_toStartOf="@+id/editTextNumberDecimal"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberDecimal" />

    <TextView
        android:id="@+id/password"
        android:layout_width="68dp"
        android:layout_height="24dp"
        android:layout_marginStart="222dp"
        android:layout_marginLeft="222dp"
        android:layout_marginEnd="223dp"
        android:layout_marginRight="223dp"
        android:text="@string/password"
        android:textColor="#FFFFFF"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextNumberDecimal2"
        app:layout_constraintEnd_toEndOf="@+id/editTextNumberDecimal2"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>